Node Revision Delete 7.x-3.0-alpha2, 2017-XX-XX
-----------------------------------------------
Changes since 7.x-3.0-alpha1:

- #2888159 by adriancid: Drush command to get how many revisions will be deleted
  per cron run.
- #2888145 by adriancid: Drush command to configure how many revisions delete
  per cron run.
- #2846726 by proconnor15, adriancid: Add option to delete revisions every 2
  years while cron runs.
- #2888124 by adriancid: Improve the recommended modules section.

Node Revision Delete 7.x-3.0-alpha1, 2017-06-20
-----------------------------------------------
Changes since 7.x-2.7:

- by adriancid: Change variables to the his new name.
- by adriancid: Manage the configuration for the 'when_to_delete' and
  'minimun_age_to_delete' variables.
- by adriancid: Create a Confirm Form to delete the content type configuration.
- by adriancid: Added the operations dropbutton.
- by adriancid: Added time configurations to the module configuration page.
- by adriancid: Changed the module configuration page.
- by adriancid: Add the configuration options to the content type edit form.
- by adriancid: Update variables to the new format.
- by adriancid: Starting the port of the Drupal 8 module functionalities.

Node Revision Delete 7.x-2.7, 2017-05-25
----------------------------------------
Changes since 7.x-2.6:

- #2881507 by adriancid: Create an option group in the content type edit form.
- #2881502 by adriancid: Use dt() function to translate the drush command
  strings.
- #2881467 by adriancid: Disable the 'Delete revisions now' option if there not
  exists candidates nodes with revisions to delete.
- #2881321 by adriancid: Always show the status table in the admin settings
  page.
- #2881289 by adriancid: Put the admin form in the
  node_revision_delete.admin.inc file.
- #2871238 by by applicity_sam, adriancid: Add the 'Limit the amount of
  revisions for this content type' option in the Publishing option vertical tab.